--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,8 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir  conferencias y salir en youtube. Pero estadisticamente no lo eres ...por ahora
+                </p>
             </div>
         </div>
 
