--- a/blogpost.html
+++ b/blogpost.html
@@ -8,13 +8,14 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu Blog de Confianza</span>
+                <span id="tagline">Tu Blog Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
                 <p>los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir  conferencias y salir en youtube. Pero estadisticamente no lo eres ...por ahora
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
 
