cambie usando el visual y el bash

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>cambie el titulo del post usando gitHub online</title>
+        <title>cambie el titulo del post usando gitHub online y esto agregue con el bash y visual</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
 
