agregue algo al titulo con hub online
practicaba

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>practique combiando entre bash y visual de la consola y el Hub online</title>
+        <title>practique combiando entre bash y visual de la consola y el Hub online luce sencillo espero no cagarla</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
 
