--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>practique y luce sencillo espero no cagarla</title>
+        <title>practique y mas practica asi no puedas cagarla facilmente</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
 
