--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>otra practica para no cagarla</title>
+        <title>otra practica para espero no cagarla</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
 
