--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>otra practica para, espero no cagarla mas adelante</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
@@ -7,6 +8,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
                 <span id="tagline">Tu Blog de cabecera</span>
             </div>
