cabecera footer terminada

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
+
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>otra practica para, espero no cagarla mas adelante</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
@@ -16,6 +19,9 @@
                 <p>los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir  conferencias y salir en youtube. Pero estadisticamente no lo eres ...por ahora
                 </p>
                 <p>Suscribete y dale like</p>
+            </div>
+            <div id="footer">
+                Echo con amor en platzi  💚
             </div>
         </div>
 
