--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>otra practica para, espero no cagarla mas adelante</title>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
 
