--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
                 <span id="tagline">Tu Blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el t&iacutetulo atractivo e interesante del post</h1>
+                <h1>Aqu&iacute; hinicia la historia de un gran proyecto</h1>
                 <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p>los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir  conferencias y salir en youtube. Pero estad&iacute;sticamente no lo eres ...por ahora
                 </p>
