--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/muestra.png" width="100%" /></p>
                 <p>los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir  conferencias y salir en youtube. Pero estad&iacute;sticamente no lo eres ...por ahora
                 </p>
                 <p>Suscribete y dale like</p>
